--- a/ec2/tasks/main.yml
+++ b/ec2/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
 - ec2:
     key_name: ranjitTestLondon
-    region: us-east-1
-    group: webserver
+    region: eu-west-2
     instance_type: t3.small
     image: ami-0c9e60910b28915bb
     wait: yes
@@ -11,7 +10,7 @@
       - device_name: /dev/xvda
         volume_type: gp2
         volume_size: 10
-    vpc_subnet_id: subnet-082dbd9dbf44d97ee
+    vpc_subnet_id: vpc-980cfbe2
     assign_public_ip: yes
     count_tag:
       Name: dbserver
