--- a/ec2/tasks/main.yml
+++ b/ec2/tasks/main.yml
@@ -10,7 +10,7 @@
       - device_name: /dev/xvda
         volume_type: gp2
         volume_size: 10
-    vpc_subnet_id: vpc-090b65ca11633b800
+    vpc_subnet_id: subnet-082dbd9dbf44d97ee
     assign_public_ip: yes
     count_tag:
       Name: dbserver
