--- a/ec2/tasks/main.yml
+++ b/ec2/tasks/main.yml
@@ -2,7 +2,7 @@
 - ec2:
     key_name: ranjitTestLondon
     region: eu-west-2
-    instance_type: t3.small
+    instance_type: t3.large
     image: ami-0c9e60910b28915bb
     wait: yes
     wait_timeout: 500
