--- a/ec2/tasks/main.yml
+++ b/ec2/tasks/main.yml
@@ -31,6 +31,6 @@
              ec2_ip_address={{item.public_ip}}
    with_items: ec2.instances
 
- - name: Wait for the instances to boot by checking the ssh port
-   wait_for: host={{item.public_ip}} port=22 delay=60 timeout=320 state=started
+ - name: Wait for the instances to boot by checking the rdp port
+   wait_for: host={{item.public_ip}} port=3389 delay=60 timeout=320 state=started
    with_items: ec2.instances
