--- a/ec2/tasks/main.yml
+++ b/ec2/tasks/main.yml
@@ -20,7 +20,7 @@
    register: ec2
 
  - debug: var=item
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances}}"
 
  - add_host: name={{ item.public_ip }} >
              groups=tag_Type_{{ec2_tag_Type}},tag_Environment_{{ec2_tag_Environment}}
@@ -29,8 +29,8 @@
              ec2_tag_Type={{ec2_tag_Type}}
              ec2_tag_Environment={{ec2_tag_Environment}}
              ec2_ip_address={{item.public_ip}}
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances}}"
 
  - name: Wait for the instances to boot by checking the rdp port
    wait_for: host={{item.public_ip}} port=3389 delay=60 timeout=320 state=started
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances}}"
