--- a/ec2-vars/sql-server.yml
+++ b/ec2-vars/sql-server.yml
@@ -1,9 +1,9 @@
 
-ec2_keypair: "ranjitTestLondon"
-ec2_security_group: "sg-0b915f3c217d39aaf"
+ec2_keypair: "<key_name>"
+ec2_security_group: "<security_group_id>"
 ec2_instance_type: "m4.large"
-ec2_image: "ami-0d6431f36860d0aa1"
-ec2_subnet_ids: ['subnet-082dbd9dbf44d97ee']
+ec2_image: "<ami_id>"
+ec2_subnet_ids: ['<subnet_id>']
 ec2_region: "eu-west-2"
 ec2_tag_Name: "GW SQL Server"
 ec2_tag_Type: "EC2 SQL SERVER"
